# Password_Manager

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
password_manager/: cli.py  crypto.py  db.py  password.py
scripts/: __init__.py
